@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2006 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.326 2006-12-14 12:28:50 martin Exp $
+# $Id: CHANGES,v 1.327 2006-12-14 13:30:45 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -29,7 +29,9 @@ CVS HEAD (????/??/??)
  - (2006/12/13) moved PostMasterPOP3MaxEmailSize default 6 MB to 12 MB
 
 2.1.5 (????/??/??)
-
+ - (2006/12/14) fixed customer ldap auth if system is iso-8859 and ldap server
+    is running in utf-8
+ - (2006/12/14) fixed not working Kernel/System/DB/db2.pm (syntax error)
 
 2.1.4 (2006/12/13)
  - (2006/12/13) fixed not working free time selection in AgentTicketClose,
